[package]
name = "warvk"
version = "0.1.0"
authors = ["Ella-0 <23418164+Ella-0@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.19"
vk-sys = "0.5.2"
vulkano-shaders = "0.19"
wayland-server = "0.28"
vulkano-win = "0.19"
calloop = "0.6.4"
nix = "0.17"
smithay = "0.2.1"
winit = "0.22"
slog = "2.5.2"
slog-term = "2.3"
slog-async = "2.2"
