[package]
name = "warvk"
version = "0.1.0"
authors = ["Ella-0 <23418164+Ella-0@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.19"
vk-sys = "0.5.2"
vulkano-shaders = "0.19"
vulkano-win = "0.19"
calloop = "0.6.4"
winit = "0.22"
ash = "0.31.0"
#slog = { version = "2.1.1" }
#slog-term = "2.3"
#slog-async = "2.2"

[build-dependencies]
shaderc = "0.6.2"

[dependencies.smithay]
git = "https://github.com/smithay/smithay"
branch = "vberger/fix-frames"
default-features = false
features = [ "wayland_frontend", "backend_session", "backend_session_logind", "backend_libinput"]
